--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .gradle
 /build/
+out/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +13,14 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Idea files
+*.iml
+.idea/
+.DS_Store
+
+# Eclipse files
+.classpath
+.project
+.settings/
+bin/
